# spbstuLabs

./: .gitignore.swp  Makefile  README.md
1st_year/sem1.1/algorithm_and_programming_c_and_cpp/: README.md
data/: base32file_test.txt  data.txt  rle_comp.txt  task3.3_output.txt
lab2/data/: task3.3_output.txt  test.txt
lab2/src/: Makefile  base32file.cpp  base32file2.cpp  base32file2.hpp  basefile.cpp  basefile.hpp  iFile.hpp  lab2.cpp  rlefile.cpp  rlefile2.cpp  rlefile2.hpp
lab2_before_review/data/: base32file2.txt  rle_text  .txt
lab2_before_review/lab1/: README.md
lab2_before_review/lab1/src/: barrel.cpp  rect.hpp
lab2_before_review/lab2/data/: base32_test.txt  rle_comp.txt
lab2_before_review/lab2/src/: base32file.hpp  rlefile.hpp
lab2_before_review/src/: basefile.hpp  rlefile.cpp
sem1.1/: Mathematical Foundations of Programming
sem1.1/Algorithm_and_Programming_c_and_cpp/lab2/: 1.h  2.h  lab2.cpp
sem1.1/Algorithm_and_Programming_c_and_cpp/lab4/: lab4.cpp
sem1.1/lab1/: lab1.cpp
sem1.1/lab3/: lab3.cpp
sem1.1/lab4/: other.cpp  other.h
sem1.1/lab5/: matrix.h
sem1.1/lab6/: additionalTask.cpp  book_catalog.h  lab6.cpp  task1Book_Catalog.cpp  task4Sorting.cpp  task6Deleting.cpp
sem1.2/Summer_Project_c_and_cpp_using_VIM/task1/: CMakeLists.txt  strlen.h  strlen_iterative.c  strlen_recursive.c  test_dlopen.c  test_dynamic.c  test_static.c  test_static_O0  test_static_O1  test_static_O2  test_static_Os
sem1.2/Summer_Project_c_and_cpp_using_VIM/task2_routes/: CMakeLists.txt  db_header.h  file_utils.c  file_utils.h  main.c  route.h
sem1.2/lab2/src/: rlefile2.cpp  rlefile2.hpp
sem1.2/lab3/: .gitignore
sem1.2/lab4/: Makefile
src/: TextWrapper.cpp  TextWrapper.hpp  barrel.hpp  base32file.cpp  base32file.hpp  base32file2.cpp  base32file2.hpp  lab1.cpp  matrix.cpp  matrix.hpp  mystring.cpp  mystring.hpp  rect.cpp  rect.hpp  rlefile.cpp  rlefile.hpp
tests/: test_base32file.cpp  test_bounding_rect.cpp  test_rect_operations.cpp  test_rect_properties.cpp
(+86 files in other folders)
